@@ -48,6 +48,8 @@ Library
 - Issue #7588: ``unittest.TextTestResult.getDescription`` now includes the test
   name in failure reports even if the test has a docstring.
 
+- Issue #5801: removed spurious empty lines in wsgiref.
+
 Extension Modules
 -----------------
 
